--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   },
   "dependencies": {
     "expo": "~47.0.12",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
-    "expo-store-review": "~6.0.0",
     "expo-linking": "~3.3.0",
-    "expo-sharing": "~11.0.1"
+    "expo-status-bar": "~1.4.2",
+    "expo-store-review": "~6.0.0",
+    "react": "18.1.0",
+    "react-native": "0.70.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
