--- a/app.json
+++ b/app.json
@@ -14,11 +14,10 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "NSRemindersUsageDescription": "expo.ios.infoPlist"
     },
     "android": {
       "adaptiveIcon": {
