--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "expo": "~47.0.12",
+    "expo-calendar": "~11.0.1",
     "expo-linking": "~3.3.0",
     "expo-status-bar": "~1.4.2",
     "expo-store-review": "~6.0.0",
+    "moment": "^2.29.4",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-calendar-picker": "^7.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
