--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "expo-store-review": "~6.0.0",
-    "expo-linking": "~3.3.0"
+    "expo-linking": "~3.3.0",
+    "react-native-reanimated": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
