--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~47.0.12",
+    "expo-linking": "~3.3.0",
     "expo-status-bar": "~1.4.2",
+    "expo-store-review": "~6.0.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "expo-store-review": "~6.0.0",
-    "expo-linking": "~3.3.0",
     "react-native-reanimated": "~2.12.0"
   },
   "devDependencies": {
