--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.7.4",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~47.0.12",
@@ -17,10 +18,16 @@
     "expo-store-review": "~6.0.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-date-picker": "^4.2.6",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-reanimated": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
+  },
+  "expo": {
+    "userInterfaceStyle": "automatic"
   },
   "private": true
 }
